# swapper-rs

./: .gitignore  Cargo.toml  README.md
scripts/: convert.py
src/: lib.rs  main.rs
src/face_align/: face_align.rs  mod.rs
src/face_detect/: face_detect.rs  mod.rs
src/face_parsing/: face_parsing.rs  mod.rs
src/face_processor/: face_align.rs  face_parsing.rs  face_recognition.rs  face_xseg.rs  mod.rs  yolo_face_detector.rs
src/face_recognition/: face_recognition.rs
src/face_swap/: face_swap.rs  mod.rs
src/face_swapper/: face_swapper.rs  hires_swapper.rs  inswapper.rs  mod.rs
src/frame/: enhance.rs  mod.rs
src/post_processor/: mod.rs  post_processor.rs
src/pre_processor/: mod.rs  pre_processor.rs
src/utils/: mod.rs  process_img.rs
